fixing issues with cards not spacing properly

--- a/client/src/components/MainFeed/MainFeed.css
+++ b/client/src/components/MainFeed/MainFeed.css
@@ -1,5 +1,5 @@
 .card {
-  width: 800px;
+  width: 700px;
   height: 800px;
   margin: 20px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
@@ -7,7 +7,7 @@
 }
 
 .cardSections {
-  background-color: rgb(12, 12, 12);
+  background-color: #121212;
   width: 100%;
   height: 100px;
 }
@@ -15,7 +15,7 @@
 .imgCon-card {
   width: 100%;
   height: 500px;
-  background-color: rgb(56, 56, 56);
+  background-color: #212121;
 }
 
 .imgCard {
@@ -28,14 +28,17 @@
   display: flex;
   justify-content: center;
   position: relative;
+  height: 150px;
 }
 
 .cardTitle {
   color: white;
-  padding: 20px;
+  padding: 10px;
   font-size: 130%;
   position: absolute;
   bottom: 0;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 
 .cardUserImage {
@@ -65,6 +68,7 @@
 }
 .cardBottom {
   position: relative;
+  height: 200px;
 }
 .cardBottomImage {
   width: 40px;
@@ -101,6 +105,9 @@
 .likes {
   color: red;
 }
+.cardSpacer {
+  margin: 20px;
+}
 @media only screen and (max-width: 900px) {
   .card {
     width: 100%;
@@ -111,7 +118,7 @@
   }
 
   .cardSpacer {
-    margin: 100px;
+    margin: 200px;
   }
 }
 @media only screen and (max-width: 500px) {
